# cpp-agentic-development-frame

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  RELEASE_CHECKLIST.md  skills-lock.json
.agents/skills/coder/: SKILL.md
.agents/skills/documenter/: SKILL.md
.agents/skills/frame-development-contract/: SKILL.md
.agents/skills/project-config-and-tests/: SKILL.md
.agents/skills/project-core-dev/: SKILL.md
.agents/skills/security/: SKILL.md
.agents/skills/thinking/: SKILL.md
.github/workflows/: ci.yml  release-checks.yml
benchmarks/: CMakeLists.txt  example_bench.cpp  frame_bench.h
cmake/: run-cppcheck.cmake
config/: change-contract-policy.sh
contrib/: example-app.service  org.example.project.desktop
docs/: Doxyfile.in  mainpage.md
feature_records/: README.md
feature_records/active/: 2026-04-01-example-active-feature.md
feature_records/done/: 2026-03-20-example-done-feature.md  2026-04-01-development-contract-system-unification.md
feature_records/planned/: 2026-04-01-example-planned-feature.md
feature_records/superseded/: 2026-03-10-example-superseded-feature.md
scripts/: check-release-hygiene.sh  check-test-commentary.sh  init-project.sh  run-release-checklist.sh  run-valgrind.sh  test-change-contracts.sh
src/: main.cpp  projectcore.cpp  projectcore.h
tests/: CMakeLists.txt  clismoketest.cpp  frame_test.h  projectcoretest.cpp
tests/fixtures/change_contracts/: missing_plan_for_substantive_change.md
upcoming_features/: TEMPLATE.md
